Fixed fdo#31075: Use "Enter Password" in all the dialogs